Integrates Wallet UI with Metamask (#1732)
* typed store, first step in connecting Web3 (we now know the user's ethAddress)

Co-authored-by: Santiago Persico <persi93@gmail.com>

* removed debugging file

* fixed tests

* refactors user store

* added routes, declared global ethereum obj

* added redux dev utils

* records errors on addUser - store

* add devtools integration

* solves devtools integration type error

* working store error saving for addUser

* we're now able to sign messages! :D

* adds code for signature

* improve event handling for forminput

* integrate accountRegistration form

* remove test code for formInput changes

* remove unused import

* added error handling, ordered some imports

* fixed parameters for ethereum.send()

* trying to debug listen:createChannel

* improve error handling and feedback

* refactors store modules and objects

* set more env variables

* allows firebase-client to be available in MetaMask

* added useful logs for debugging in the Node initialization

* registration flow completed! :D

* added some more .env variables

* picking up stored user account from token

Co-authored-by: Santiago Persico <persi93@gmail.com>

* redirects to / if no user is logged in

* add missing icons

* fixes images styles in channels

* attempting to get balances

* unified action types, deposit flow is a wip

Co-authored-by: Santiago Persico <persi93@gmail.com>

* added missing context typing for AccountRegistration

* now storing both Ethereum and CF balances

* fixed typing for FormInput

* deposit flow finished!

* State Channels screen shows Hub0 address

* fix error message in account registration

* added key for multiple elements, fixed styles for SC list

* fix form-button spinner behaviour

* add feedback for loading state (button-spinner)

* move getUser to global app component

* fix unit input for "ETH"

* test implementatino to get

--- a/wallet-ui/package.json
+++ b/wallet-ui/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "ethers": "4.0.30",
     "node-sass": "4.12.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -39,6 +40,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "4.3.4"
+    "@types/enzyme": "^3.9.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/react-redux": "^7.1.0",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/web3": "^1.0.19",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0"
   }
 }
