--- a/typescript-typings/package.json
+++ b/typescript-typings/package.json
@@ -12,14 +12,14 @@
     "clean": "rm -rf scripts"
   },
   "devDependencies": {
-    "copyfiles": "2.1.0",
+    "copyfiles": "2.1.1",
     "ethereum-waffle": "2.0.12",
     "tslint": "5.18.0",
-    "ethers": "4.0.32",
-    "typescript": "3.5.1"
+    "typescript": "3.5.3",
+    "ethers": "4.0.33"
   },
   "dependencies": {
-    "@types/node": "12.0.12",
-    "truffle-contract": "4.0.23"
+    "@types/node": "12.6.2",
+    "truffle-contract": "4.0.24"
   }
 }
