--- a/wallet-ui/package.json
+++ b/wallet-ui/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
-    "@types/node": "12.0.12",
+    "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
-    "ethers": "4.0.30",
+    "ethers": "4.0.33",
     "node-sass": "4.12.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
-    "redux": "4.0.1",
+    "redux": "4.0.4",
     "redux-thunk": "2.3.0",
-    "typescript": "3.5.2"
+    "typescript": "3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,12 +40,12 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "^3.9.4",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/react-redux": "^7.1.0",
-    "@types/react-router-dom": "^4.3.4",
-    "@types/web3": "^1.0.19",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0"
+    "@types/enzyme": "3.10.2",
+    "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/react-redux": "7.1.1",
+    "@types/react-router-dom": "4.3.4",
+    "@types/web3": "1.0.19",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0"
   }
 }
