--- a/wallet-ui/package.json
+++ b/wallet-ui/package.json
@@ -3,26 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.15",
-    "@types/node": "12.6.2",
-    "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.4",
     "ethers": "4.0.33",
     "node-sass": "4.12.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
     "react-router-dom": "5.0.1",
-    "react-scripts": "3.0.1",
     "redux": "4.0.4",
-    "redux-thunk": "2.3.0",
-    "typescript": "3.5.3"
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "CI=true react-scripts test",
+    "test:coverage": "CI=true react-scripts test --coverage",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "./src/**/*.ts*",
+      "!./src/index.tsx",
+      "!./src/**/*.mock.ts",
+      "!./src/**/*.d.ts",
+      "!./src/**/types.ts",
+      "!./src/**/index.ts",
+      "!./src/utils/log.ts",
+      "!./src/utils/testSelector.ts",
+      "!./src/store/test-utils/*.ts",
+      "!./src/store/store.ts"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,10 +51,16 @@
   "devDependencies": {
     "@types/enzyme": "3.10.2",
     "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/jest": "24.0.15",
+    "@types/node": "12.6.2",
+    "@types/react": "16.8.23",
+    "@types/react-dom": "16.8.4",
     "@types/react-redux": "7.1.1",
     "@types/react-router-dom": "4.3.4",
-    "@types/web3": "1.0.19",
     "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.14.0"
+    "enzyme-adapter-react-16": "1.14.0",
+    "jest-fetch-mock": "^2.1.2",
+    "react-scripts": "3.0.1",
+    "typescript": "3.5.3"
   }
 }
