--- a/high-roller-bot/package.json
+++ b/high-roller-bot/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@counterfactual/firebase-client": "0.0.3",
-    "@counterfactual/types": "0.2.18",
+    "@counterfactual/node": "0.2.19",
     "@counterfactual/types": "0.0.23",
     "eventemitter3": "^4.0.0"
   },
