--- a/simple-hub-server/package.json
+++ b/simple-hub-server/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "@counterfactual/firebase-client": "0.0.3",
-    "@counterfactual/types": "0.2.18",
+    "@counterfactual/node": "0.2.19",
     "@counterfactual/types": "0.0.23",
     "@counterfactual/typescript-typings": "0.1.0",
     "@ebryn/jsonapi-ts": "0.1.17",
