--- a/tic-tac-toe-bot/package.json
+++ b/tic-tac-toe-bot/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@counterfactual/firebase-client": "0.0.3",
     "@counterfactual/dapp-tic-tac-toe": "0.1.2",
-    "@counterfactual/types": "0.2.18",
+    "@counterfactual/node": "0.2.19",
     "@counterfactual/types": "0.0.23",
     "eventemitter3": "^4.0.0"
   },
