--- a/wallet-ui/package.json
+++ b/wallet-ui/package.json
@@ -49,17 +49,18 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "3.10.2",
     "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/enzyme": "3.10.2",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.2",
-    "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "7.1.1",
     "@types/react-router-dom": "4.3.4",
-    "enzyme": "3.10.0",
+    "@types/react": "16.8.23",
+    "@types/web3": "1.0.19",
     "enzyme-adapter-react-16": "1.14.0",
-    "jest-fetch-mock": "^2.1.2",
+    "enzyme": "3.10.0",
+    "jest-fetch-mock": "2.1.2",
     "react-scripts": "3.0.1",
     "typescript": "3.5.3"
   }
