Bulk deps update (#2049)
* Update dependency @types/react to v16.8.23

* Pin dependencies

* chore(deps): update dependency @firebase/util to v0.2.21

* chore(deps): update dependency @types/enzyme to v3.10.2

* chore(deps): update dependency @types/react-redux to v7.1.1

* chore(deps): update dependency copyfiles to v2.1.1

* chore(deps): update dependency eth-gas-reporter to v0.2.4

* chore(deps): update dependency ganache-cli to v6.4.5

* chore(deps): update dependency ganache-core to v2.5.7

* chore(deps): update dependency solidity-coverage to v0.6.2

* chore(deps): update dependency rollup-plugin-typescript2 to v0.22.0

* chore(deps): update dependency truffle to v5.0.27

* fix(deps): update dependency @types/node to v12.6.2

* fix(deps): update dependency truffle-contract to v4.0.24

* chore(deps): update dependency ethers to v4.0.33 (#1863)

* Update dependency redux to v4.0.4 (#1867)

* chore(deps): update dependency typescript to v3.5.3 (#1874)

* chore(deps): update dependency prettier to v1.18.2 (#1884)

* chore(deps): update dependency ts-node to v8.3.0 (#1888)

* fix(deps): update dependency p-queue to v6 (#1893)

* update after merge

* Revert pqueue

* Pin dependency jest-fetch-mock to 2.1.2

* Update dependency @firebase/util to v0.2.22

* Update dependency lerna to v3.16.1

* Remove yarn locks

* Update dependency ts-mockito to v2.3.2 (#1943)

* Update dependency ts-mockito to v2.3.2

* Fix erorrgp

* Bulk deps update (#1947)

* Update dependency @types/react to v16.8.23

* Update dependency truffle-hdwallet-provider to v1.0.13

* Pin dependencies

* chore(deps): update dependency @firebase/util to v0.2.21

* chore(deps): update dependency @types/enzyme to v3.10.2

* chore(deps): update dependency @types/react-redux to v7.1.1

* chore(deps): update dependency copyfiles to v2.1.1

* chore(deps): update dependency eth-gas-reporter to v0.2.4

* chore(deps): update dependency g

--- a/types/package.json
+++ b/types/package.json
@@ -16,9 +16,9 @@
   },
   "devDependencies": {
     "ethers": "4.0.33",
-    "rollup": "1.16.7",
-    "rollup-plugin-typescript2": "0.22.0",
-    "typescript": "3.5.3",
-    "rpc-server": "0.0.1"
+    "rollup": "1.17.0",
+    "rollup-plugin-typescript2": "0.22.1",
+    "rpc-server": "0.0.1",
+    "typescript": "3.5.3"
   }
 }
