--- a/dapp-tic-tac-toe/package.json
+++ b/dapp-tic-tac-toe/package.json
@@ -6,6 +6,8 @@
     "node": "10.15.3"
   },
   "dependencies": {
+    "@counterfactual/cf.js": "0.2.3",
+    "@counterfactual/types": "0.0.27",
     "@counterfactual/apps": "0.1.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
