--- a/firebase-server/package.json
+++ b/firebase-server/package.json
@@ -9,8 +9,8 @@
     "node": "10.15.3"
   },
   "scripts": {
-    "build": "tsc -p . && rollup -c",
-    "build:watch": "tsc -p . && rollup -c -w",
+    "build": "tsc -b . && rollup -c",
+    "build:watch": "tsc -b  . && rollup -c -w",
     "test": "jest --setupFiles dotenv-extended/config --runInBand --bail --forceExit",
     "test:coverage": "jest --runInBand --detectOpenHandles --bail --coverage",
     "lint:fix": "tslint -c tslint.json -p . --fix",
