--- a/playground/package.json
+++ b/playground/package.json
@@ -17,8 +17,9 @@
     "test:watch": "stencil test --spec --e2e --watchAll"
   },
   "dependencies": {
-    "@counterfactual/types": "0.2.18",
+    "@counterfactual/cf.js": "0.2.3",
     "@counterfactual/types": "0.0.27",
+    "@counterfactual/node": "0.2.28",
     "@stencil/core": "0.18.1-0",
     "@stencil/router": "0.3.3",
     "@stencil/sass": "0.1.1",
