--- a/wallet-ui/tsconfig.json
+++ b/wallet-ui/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "preserve",
     "isolatedModules": true,
     "declaration": false,
+    "declarationMap": false,
     "types": ["jest", "node", "react", "react-dom", "web3"]
   },
   "include": ["src"]
