--- a/wallet-ui/package.json
+++ b/wallet-ui/package.json
@@ -17,7 +17,9 @@
     "build": "react-scripts build",
     "test": "CI=true react-scripts test",
     "test:coverage": "CI=true react-scripts test --coverage",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tslint -c tslint.json -p .",
+    "lint:fix": "tslint -c tslint.json -p . --fix"
   },
   "jest": {
     "collectCoverageFrom": [
