[contracts,node] Fix mismanaged OutcomeType, Interpreter, and Virtual App code (#1918)
* add virtual,CT contract

* fix rebase

* More verbose error message

* Cleanup

* add newlines

* Get merge ready

* Fix ETH case for CoinTransferFromVirtualAppInterpreter

* Deploy contracts and tests

* Add SingleAssetTwoPartyCoinTransferInterpreter

* Handle SingleAssetCoinTransfer for virtual apps

* Deploy contracts and tests

* Fix prototcols2 test

* Remove expiryBlock

* Add computeOutcomeWithCurrentState

* Simplify get-outcome-increments a ton

* many many changes

* Code clean

* Handle timeouts

* tests pass

* Reorder block

* Deploy all the things

* Fix linting issue

* Fix test

* Fix docs

* Bump all versions

* Run wallet-ui inside scope

--- a/local-ganache-server/tsconfig.json
+++ b/local-ganache-server/tsconfig.json
@@ -1,14 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declaration": true,
-    "declarationDir": "dist/",
+    "composite": true,
     "outDir": "dist/",
     "resolveJsonModule": true,
-    "typeRoots": [
-      "../../node_modules/@types",
-      "../../node_modules/@counterfactual/typescript-typings/types"
-    ],
     "types": ["jest"]
   },
   "references": [
