--- a/local-ganache-server/package.json
+++ b/local-ganache-server/package.json
@@ -10,20 +10,19 @@
   },
   "scripts": {
     "build": "tsc -b .",
-    "build:contracts": "cd ../contracts && yarn build && cd - && tsc -b .",
     "test": "jest --setupFiles dotenv-extended/config --runInBand --bail",
     "test:coverage": "jest --runInBand --detectOpenHandles --bail --coverage",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "lint": "tslint -c tslint.json -p ."
   },
   "devDependencies": {
-    "@counterfactual/contracts": "0.1.13",
-    "@counterfactual/apps": "0.1.2",
-    "@counterfactual/types": "0.0.27",
-    "ethers": "4.0.33",
     "typescript": "3.5.3"
   },
   "dependencies": {
-    "ganache-core": "2.6.0"
+    "@counterfactual/contracts": "0.1.14",
+    "@counterfactual/types": "0.0.28",
+    "@counterfactual/apps": "0.1.3",
+    "ganache-core": "2.5.7",
+    "ethers": "4.0.33"
   }
 }
