--- a/node/package.json
+++ b/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@counterfactual/node",
-  "version": "0.2.28",
+  "version": "0.2.29",
   "main": "dist/index.js",
   "iife": "dist/index.iife.js",
   "types": "dist/src/index.d.ts",
@@ -10,7 +10,9 @@
     "node": "10.15.3"
   },
   "scripts": {
-    "build": "tsc -b . && rollup -c",
+    "build": "yarn build:ts && yarn build:rollup",
+    "build:ts": "tsc -b .",
+    "build:rollup": "rollup -c",
     "build:watch": "tsc -b . && rollup -c -w",
     "test": "jest --setupFiles dotenv-extended/config --runInBand --bail --forceExit",
     "test:coverage": "jest --runInBand --detectOpenHandles --bail --coverage",
@@ -18,7 +20,7 @@
     "lint": "tslint -c tslint.json -p ."
   },
   "devDependencies": {
-    "@counterfactual/apps": "0.1.2",
+    "@counterfactual/apps": "0.1.3",
     "@counterfactual/firebase-server": "0.0.1",
     "@counterfactual/local-ganache-server": "0.0.2",
     "@counterfactual/postgresql-node-connector": "0.0.3",
@@ -50,9 +52,9 @@
   },
   "dependencies": {
     "@counterfactual/cf.js": "0.2.3",
-    "@counterfactual/contracts": "0.1.13",
+    "@counterfactual/contracts": "0.1.14",
     "@counterfactual/firebase-client": "0.0.3",
-    "@counterfactual/types": "0.0.27",
+    "@counterfactual/types": "0.0.28",
     "ethers": "4.0.33",
     "eventemitter3": "^4.0.0",
     "loglevel": "^1.6.1",
