[greenboard] Implement E2E tests (#1906)
* added first test, with some nice tooling

* made openMetamask() a bit smarter

* added some comments for the setupMetamask() helper

* cleaned up switchMetamaskPopup(), +newTab method

* removed unnecessary switchToWallet()

* moved command from test

* working on deposit tests

* updated dependencies

* MM popups, TO/retrys for DOM queries, deposit flow

* added new selectors for deposit flow

* added URL expect

* raised timeout to 10s, finished first test

* cleaned up package.json

* first attempt at running E2E on CI

* replaced gulp-cli with npx gulp

* removed unnecessary Xvfs call, testing FS

* ignored greenboard in test:ci-non-playground

* used symlink instead of cp -r

* removed metamask subdir for loading extension

* oned docker-compose, overriden shell for wallet-ui

* fixed background commands for hub & wallet-ui

* fixed whitespace, damn yaml

* added --disable-dev-shm-usage for webdriver

* added dockerize to wait for hub DB

* attempting to use sqlite, no need for PGSQL

* added start:e2e for hub (runs with SQLite)

* --remote-debugging-port didn't work, removing

* attempting chmod +x to chromedriver

* trying without disabling /dev/shm

* trying --no-sandbox + no /dev/shm

* downgrading to chromedriver@2.38.0

* moved --no-sandbox to the top

* added --disable-set-uid-sandbox

* adding selenium server

* was it a missing require all along?

* testing a newer version of chromedriver

* forcing usage of docker's chromedriver

* attempting to use RDP

* forcing manual start of chromedriver

* added callback to report driver status

* forcing chrome binary selection

* removed circle-ci integration

* added test URL for API on wallet-ui

* close browser after finishing tests

* --discover-metamask vs auto-opened MM

* renamed yarn test to start on greenboard

* updated dependencies

* added new e2e runners

* rem

--- a/simple-hub-server/package.json
+++ b/simple-hub-server/package.json
@@ -30,6 +30,7 @@
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "serve": "node dist",
     "start": "env-cmd -e development ts-node -r dotenv-extended/config src/",
+    "start:e2e": "env-cmd -e test ts-node -r dotenv-extended/config src/",
     "test": "env-cmd -e test --fallback jest --forceExit",
     "test:ci": "env-cmd -e test --fallback jest --forceExit"
   },
