added no-op script for publishing on greenboard (#2086)

--- a/greenboard/package.json
+++ b/greenboard/package.json
@@ -28,7 +28,8 @@
     "url": "git+https://github.com/counterfactual/monorepo.git"
   },
   "scripts": {
-    "start": "jest"
+    "start": "jest",
+    "publish": "echo This package does not need publishing."
   },
   "jest": {
     "roots": [
