--- a/greenboard/package.json
+++ b/greenboard/package.json
@@ -44,14 +44,14 @@
     "url": "https://github.com/counterfactual/monorepo/issues"
   },
   "devDependencies": {
-    "@types/chromedriver": "^2.38.0",
+    "@types/chromedriver": "2.38.0",
     "@types/jest": "^24.0.15",
-    "@types/selenium-webdriver": "^4.0.1",
-    "chromedriver": "2.38",
+    "@types/selenium-webdriver": "4.0.1",
+    "chromedriver": "76.0.0",
     "jest": "^24.8.0",
-    "selenium-webdriver": "^4.0.0-alpha.4",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.5.3"
+    "selenium-webdriver": "4.0.0-alpha.4",
+    "ts-jest": "24.0.2",
+    "typescript": "3.5.3"
   },
   "dependencies": {}
 }
