--- a/packages/dapp-high-roller/package.json
+++ b/packages/dapp-high-roller/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@counterfactual/cf.js": "0.2.4",
+    "@counterfactual/types": "0.0.32",
     "@stencil/core": "0.18.1-0",
     "@stencil/router": "0.3.3"
   },
