--- a/packages/tic-tac-toe-bot/package.json
+++ b/packages/tic-tac-toe-bot/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.22",
   "description": "A bot for the Tic Tac Toe Playground dApp.",
   "author": "Counterfactual",
-  "homepage": "https://github.com/counterfactual/monorepo",
+  "homepage": "https://counterfactual.com/",
   "license": "MIT",
   "main": "src/index.js",
   "engines": {
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/counterfactual/monorepo.git"
+    "url": "git+https://github.com/counterfactual/dapps-bots.git"
   },
   "scripts": {
     "heroku-postbuild": "sh ./scripts/heroku-postbuild.sh",
@@ -30,7 +30,7 @@
     "test": "echo 'temporarily skipping' || env-cmd -e test jest --forceExit"
   },
   "bugs": {
-    "url": "https://github.com/counterfactual/monorepo/issues"
+    "url": "https://github.com/counterfactual/dapps-bots/issues"
   },
   "dependencies": {
     "@counterfactual/firebase-client": "0.0.3",
