--- a/packages/high-roller-bot/package.json
+++ b/packages/high-roller-bot/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "@counterfactual/firebase-client": "0.0.3",
     "@counterfactual/node": "0.2.40",
-    "@counterfactual/types": "0.0.30",
+    "@counterfactual/types": "^0.0.33",
+    "@counterfactual/typescript-typings": "^0.1.0",
     "eventemitter3": "^4.0.0"
   },
   "devDependencies": {
