updated all tsconfig.json files

--- a/packages/tic-tac-toe-bot/tsconfig.json
+++ b/packages/tic-tac-toe-bot/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
     "typeRoots": [
-      "../../node_modules/@types",
+      "../../node_modules/@counterfactual/types",
       "../../node_modules/@counterfactual/typescript-typings/types"
     ]
   }
