--- a/packages/dapp-high-roller/tsconfig.json
+++ b/packages/dapp-high-roller/tsconfig.json
@@ -1,15 +1,12 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "allowUnreachableCode": false,
-    "declaration": false,
     "lib": ["dom", "es2017"],
     "jsx": "react",
     "jsxFactory": "h",
     // @types/mocha has a duplicate conflict, this is the suggested temp fix.
     "skipLibCheck": true,
-    "types": ["node"]
+    "types": ["node", "@counterfactual/types"]
   },
-  "references": [{ "path": "../types" }],
   "include": ["src"]
 }
