--- a/packages/playground/tsconfig.json
+++ b/packages/playground/tsconfig.json
@@ -1,20 +1,13 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "allowUnreachableCode": false,
-    "declaration": false,
     "lib": ["dom", "es2017"],
-    "moduleResolution": "node",
-    "module": "esnext",
     "jsx": "react",
     "jsxFactory": "h",
     // @types/mocha has a duplicate conflict, this is the suggested temp fix.
     "skipLibCheck": true,
-    "types": ["jest", "ethers"]
+    "types": ["jest", "ethers", "@counterfactual/types"]
   },
-  "references": [
-    { "path": "../types" }
-  ],
   "include": ["src"],
   "exclude": ["__mocks__", "src/**/*.spec.ts", "src/**/*.e2e.ts"]
 }
