--- a/packages/tic-tac-toe-bot/tsconfig.do-not-edit-merged.json
+++ b/packages/tic-tac-toe-bot/tsconfig.do-not-edit-merged.json
@@ -7,13 +7,15 @@
   "compilerOptions": {
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "declaration": true,
+    "allowUnreachableCode": false,
+    "declaration": false,
+    "declarationMap": false,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["es2017", "dom", "esnext.asynciterable"],
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "noImplicitAny": false,
     "noImplicitReturns": true,
@@ -27,6 +29,10 @@
     "strict": true,
     "strictPropertyInitialization": false,
     "target": "es2017",
-    "typeRoots": ["./node_modules/@counterfactual/typescript-typings/types"]
+    "typeRoots": [
+      "./node_modules/@types",
+      "./node_modules/@counterfactual/types",
+      "./node_modules/@counterfactual/typescript-typings/types"
+    ]
   }
 }
