[dapps-bots] Lots of fixes for package.json and tsconfig.json (#14)
* removed renovate.json

* fixed repo/bugs links in all packages

* removed patch, renamed run:playground to run:all

* added `types`, `typescript-typings` (all packages)

* cleaned up comments in tslint.json

* updated all tsconfig.json files

* fixed typo

--- a/packages/dapp-high-roller/package.json
+++ b/packages/dapp-high-roller/package.json
@@ -17,17 +17,18 @@
   },
   "dependencies": {
     "@counterfactual/cf.js": "0.2.3",
-    "@counterfactual/types": "0.0.30",
+    "@counterfactual/types": "^0.0.33",
+    "@counterfactual/typescript-typings": "^0.1.0",
     "@stencil/core": "0.18.1-0",
     "@stencil/router": "0.3.3"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/counterfactual/monorepo"
+    "url": "git+https://github.com/counterfactual/dapps-bots"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/counterfactual/monorepo"
+    "url": "https://github.com/counterfactual/dapps-bots/issues"
   },
   "homepage": "https://counterfactual.com",
   "devDependencies": {
