--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -18,8 +18,9 @@
   },
   "dependencies": {
     "@counterfactual/cf.js": "0.2.3",
-    "@counterfactual/types": "0.0.30",
     "@counterfactual/node": "0.2.40",
+    "@counterfactual/types": "^0.0.33",
+    "@counterfactual/typescript-typings": "^0.1.0",
     "@stencil/core": "0.18.1-0",
     "@stencil/router": "0.3.3",
     "@stencil/sass": "0.1.1",
@@ -27,11 +28,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/counterfactual/monorepo"
+    "url": "git+https://github.com/counterfactual/dapps-bots"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/counterfactual/monorepo"
+    "url": "https://github.com/counterfactual/dapps-bots/issues"
   },
   "homepage": "https://counterfactual.com",
   "devDependencies": {
