--- a/packages/tic-tac-toe-bot/package.json
+++ b/packages/tic-tac-toe-bot/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.22",
   "description": "A bot for the Tic Tac Toe Playground dApp.",
   "author": "Counterfactual",
-  "homepage": "https://github.com/counterfactual/monorepo",
+  "homepage": "https://counterfactual.com/",
   "license": "MIT",
   "main": "src/index.js",
   "engines": {
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/counterfactual/monorepo.git"
+    "url": "git+https://github.com/counterfactual/dapps-bots.git"
   },
   "scripts": {
     "heroku-postbuild": "sh ./scripts/heroku-postbuild.sh",
@@ -30,13 +30,14 @@
     "test": "echo 'temporarily skipping' || env-cmd -e test jest --forceExit"
   },
   "bugs": {
-    "url": "https://github.com/counterfactual/monorepo/issues"
+    "url": "https://github.com/counterfactual/dapps-bots/issues"
   },
   "dependencies": {
-    "@counterfactual/firebase-client": "0.0.3",
     "@counterfactual/dapp-tic-tac-toe": "0.1.2",
+    "@counterfactual/firebase-client": "0.0.3",
     "@counterfactual/node": "0.2.40",
-    "@counterfactual/types": "0.0.30",
+    "@counterfactual/types": "^0.0.33",
+    "@counterfactual/typescript-typings": "^0.1.0",
     "eventemitter3": "^4.0.0"
   },
   "devDependencies": {
