renamed yarn:run:* to yarn:start

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "test": "lerna run --stream --concurrency 1 test",
     "lint": "lerna run lint --parallel --no-bail",
     "lint:fix": "lerna run lint:fix --parallel --no-bail",
-    "run:all": "lerna run start --parallel",
-    "run:dapps": "lerna run start --parallel --scope=**/dapp-high-roller --scope=**/dapp-tic-tac-toe",
-    "run:bots": "lerna run start --parallel --scope=**/high-roller-bot --scope=**/tic-tac-toe-bot",
+    "start": "lerna run start --parallel --ignore=**/playground",
+    "start:dapps": "lerna run start --parallel --scope=**/dapp-high-roller --scope=**/dapp-tic-tac-toe",
+    "start:bots": "lerna run start --parallel --scope=**/high-roller-bot --scope=**/tic-tac-toe-bot",
     "publish": "lerna publish --yes from-package patch"
   },
   "keywords": [
