--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "esModuleInterop": true,
     "lib": ["es2017", "dom", "esnext.asynciterable"],
     "target": "es2017",
-    "module": "esnext",
+    "module": "commonjs",
     "sourceMap": true,
     "typeRoots": [
       "./node_modules/@types",
