--- a/packages/high-roller-bot/package.json
+++ b/packages/high-roller-bot/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "main": "src/index.js",
   "engines": {
-    "yarn": "1.12.3",
+    "yarn": "1.17.3",
     "node": "10.15.3"
   },
   "directories": {
@@ -32,10 +32,10 @@
     "url": "https://github.com/counterfactual/dapps-bots/issues"
   },
   "dependencies": {
-    "@counterfactual/firebase-client": "0.0.3",
-    "@counterfactual/node": "0.2.40",
-    "@counterfactual/types": "^0.0.33",
-    "@counterfactual/typescript-typings": "^0.1.0",
+    "@counterfactual/firebase-client": "0.0.6",
+    "@counterfactual/node": "0.2.66",
+    "@counterfactual/types": "0.0.38",
+    "@counterfactual/typescript-typings": "0.1.2",
     "eventemitter3": "^4.0.0"
   },
   "devDependencies": {
