--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -2,7 +2,7 @@
   "name": "@counterfactual/playground",
   "version": "0.1.5",
   "engines": {
-    "yarn": "1.12.3",
+    "yarn": "1.17.3",
     "node": "10.15.3"
   },
   "scripts": {
@@ -17,10 +17,10 @@
     "test:watch": "stencil test --spec --e2e --watchAll"
   },
   "dependencies": {
-    "@counterfactual/cf.js": "0.2.3",
-    "@counterfactual/node": "0.2.40",
-    "@counterfactual/types": "^0.0.33",
-    "@counterfactual/typescript-typings": "^0.1.0",
+    "@counterfactual/cf.js": "0.2.6",
+    "@counterfactual/node": "0.2.66",
+    "@counterfactual/types": "0.0.38",
+    "@counterfactual/typescript-typings": "0.1.2",
     "@stencil/core": "0.18.1-0",
     "@stencil/router": "0.3.3",
     "@stencil/sass": "0.1.1",
@@ -36,7 +36,7 @@
   },
   "homepage": "https://counterfactual.com",
   "devDependencies": {
-    "@counterfactual/typescript-typings": "0.1.0",
+    "@counterfactual/typescript-typings": "0.1.2",
     "@types/jest": "23.3.14",
     "@types/puppeteer": "1.19.0",
     "env-cmd": "9.0.3",
