--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
       - <<: *save_code
 
       - <<: *restore_dep
+      - run: npm i -g yarn@1.17.3 # because docker image uses 1.13.0
       - run:
           name: "yarn --frozen-lockfile"
           command: yarn --frozen-lockfile
@@ -101,6 +102,8 @@ jobs:
       - run:
           name: Add NPM_TOKEN auth
           command: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+
+      - run: npm i -g yarn@1.17.3 # because docker image uses 1.13.0
 
       - run:
           name: Publish any updated packages to npm
