--- a/packages/high-roller-bot/package.json
+++ b/packages/high-roller-bot/package.json
@@ -26,21 +26,21 @@
     "lint": "tslint -c tslint.json -p .",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "serve": "node dist",
-    "start": "env-cmd -e development ts-node src/"
+    "start": "tsc -b tsconfig.heroku.json && env-cmd -e development node dist/"
   },
   "bugs": {
     "url": "https://github.com/counterfactual/dapps-bots/issues"
   },
   "dependencies": {
     "@counterfactual/firebase-client": "0.0.6",
-    "@counterfactual/node": "0.2.66",
+    "@counterfactual/node": "0.2.72",
     "@counterfactual/types": "0.0.38",
     "@counterfactual/typescript-typings": "0.1.2",
     "eventemitter3": "^4.0.0"
   },
   "devDependencies": {
     "env-cmd": "9.0.3",
-    "ethers": "4.0.33",
+    "ethers": "4.0.36",
     "jest": "24.8.0",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
