--- a/packages/tic-tac-toe-bot/package.json
+++ b/packages/tic-tac-toe-bot/package.json
@@ -26,7 +26,7 @@
     "lint": "tslint -c tslint.json -p .",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "serve": "node dist",
-    "start": "env-cmd -e development ts-node src/",
+    "start": "tsc -b tsconfig.heroku.json && env-cmd -e development node dist/",
     "test": "echo 'temporarily skipping' || env-cmd -e test jest --forceExit"
   },
   "bugs": {
@@ -35,7 +35,7 @@
   "dependencies": {
     "@counterfactual/dapp-tic-tac-toe": "0.1.2",
     "@counterfactual/firebase-client": "0.0.6",
-    "@counterfactual/node": "0.2.66",
+    "@counterfactual/node": "0.2.72",
     "@counterfactual/types": "0.0.38",
     "@counterfactual/typescript-typings": "0.1.2",
     "eventemitter3": "^4.0.0"
@@ -43,7 +43,7 @@
   "devDependencies": {
     "@counterfactual/firebase-server": "0.0.1",
     "env-cmd": "9.0.3",
-    "ethers": "4.0.33",
+    "ethers": "4.0.36",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
     "ts-node": "8.3.0",
