chore: Update dapps to use apps@0.1.12

--- a/packages/dapp-high-roller/package.json
+++ b/packages/dapp-high-roller/package.json
@@ -16,7 +16,7 @@
     "test:e2e": "echo 'E2E tests are disabled, skipping'"
   },
   "dependencies": {
-    "@counterfactual/apps": "^0.1.11",
+    "@counterfactual/apps": "0.1.12",
     "@counterfactual/cf.js": "0.2.6",
     "@counterfactual/types": "0.0.38",
     "@counterfactual/typescript-typings": "0.1.2",
