--- a/packages/tic-tac-toe-bot/tsconfig.json
+++ b/packages/tic-tac-toe-bot/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
     "typeRoots": [
       "../../node_modules/@counterfactual/types",
       "../../node_modules/@counterfactual/typescript-typings/types"
